# django-whatsapp-business-api-is

./: .gitignore  Dockerfile  LICENSE  README.rst  boot_django.py  commands  makemigrations.py  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg
whatsapp_business_api_is/: admin.py  apps.py  bot_actions.py  bot_functions.py  conf.py  exceptions.py  messages.py  models.py  tasks.py  urls.py  user_msg.py  utils.py  views.py
whatsapp_business_api_is/management/commands/: register_360dialog_webhook.py
whatsapp_business_api_is/migrations/: 0001_initial.py  0002_wauser_disable_bot_wauser_failure_count.py
