# setup.cfg
[metadata]
name = django-whatsapp-business-api-is
version = 0.1.0
description = Django Whatsapp Business Api Infrastructure
long_description = file:README
url = https://github.com/realpython/django-receipts
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.10
setup_requires =
    setuptools >= 65.0.0
install_requires =
    Django>=4.1