# setup.cfg
[metadata]
name = django-whatsapp-business-api-is
version = 0.1.9
description = Django Whatsapp Business Api Infrastructure
long_description = file:README
url = https://github.com/roigreenberg/django-whatsapp-business-api-is
license = BSD-2-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools >= 63.2.0
install_requires =
    Django >= 4.0.3
